# accessibility

./: README_zh.md  accessibility_aafwk.gni  bundle.json  modify_gn.sh
accessibility_graphics/: BUILD.gn
accessibility_graphics/inc/: accessibility_graphics.h
accessibility_graphics/src/: accessibility_graphics.cpp
common/interface/: BUILD.gn  libaccessibility_interface.map
common/interface/include/: accessibility_element_operator_callback_proxy.h  accessibility_element_operator_proxy.h  accessibility_ipc_interface_code.h  accessible_ability_channel_proxy.h  accessible_ability_channel_stub.h  accessible_ability_manager_service_proxy.h  accessible_ability_manager_service_stub.h  i_accessibility_element_operator.h  i_accessibility_element_operator_callback.h  i_accessible_ability_channel.h  i_accessible_ability_manager_service.h
common/interface/src/: accessibility_element_operator_callback_proxy.cpp  accessibility_element_operator_callback_stub.cpp  accessibility_element_operator_proxy.cpp  accessibility_element_operator_stub.cpp  accessible_ability_channel_proxy.cpp  accessible_ability_channel_stub.cpp  accessible_ability_client_stub.cpp  accessible_ability_manager_service_proxy.cpp  accessible_ability_manager_service_stub.cpp
common/log/include/: hilog_wrapper.h
dummyData/: dummy.h
frameworks/aafwk/: BUILD.gn
frameworks/aafwk/include/: accessibility_element_operator_callback_impl.h  accessibility_ui_test_ability_impl.h  accessible_ability.h  accessible_ability_listener.h  (+3 more)
frameworks/asacfwk/: asacfwk.gni
frameworks/systemtest/: BUILD.gn
sa_profile/: BUILD.gn  accessibility.cfg
services/aams/: BUILD.gn  libaccessibilityms.map
services/interface/: BUILD.gn
services/test/: BUILD.gn  aamstestmock.gni
(+275 files in other folders)
