# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../accessibility_manager_service.gni")

src_path = "./"


config("accessibility_graphics_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "./inc"
  ]
  defines = [
    "AAMS_LOG_TAG = \"accessibility\"",
    "AAMS_LOG_DOMAIN = 0xD001D00",
  ]

  defines += accessibility_default_defines
}

accessibility_graphics_files = [
    "${src_path}/src/accessibility_graphics.cpp"
]

ohos_shared_library("accessibility_graphics") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = accessibility_graphics_files

  configs = [
    ":accessibility_graphics_config",
    "../resources/config/build:coverage_flags",
  ]

  deps = [
  ]

  external_deps = [
    "graphic_2d:2d_graphics",
    "graphic_2d:librender_service_client",
    "c_utils:utils",
  ]

  install_enable = true

  subsystem_name = "barrierfree"
  part_name = "accessibility"
}
